# auburn

./: Cargo.toml  README.md
auburn2d/: Cargo.toml  README.md
auburn2d/examples/: bevy-integration.rs  triangle-shape.rs
auburn2d/src/: collider.rs  derive_type.rs  interactions.rs  lib.rs  rotor2d.rs  shape.rs  transformation.rs
auburn2d/src/algorithm/: epa.rs  gjk.rs  toi.rs
auburn2d/src/interactions/: generic.rs  optimized.rs
auburn2d/src/interactions/optimized/: poly2d_utils.rs  transform2d.rs
auburn2d/src/interactions/optimized/transform2d/: ball_ball.rs  ball_box.rs  ball_point.rs  box_box.rs  box_point.rs  point_point.rs  poly2d.rs
auburn2d/src/interactions/optimized/vec2/: ball_ball.rs  ball_box.rs  ball_point.rs  box_box.rs  box_point.rs  point_point.rs  poly2d.rs
auburn2d/src/property/: support.rs
auburn2d/src/relation/: cast.rs  penetrates.rs
auburn2d/src/shape/: ball.rs  box2d.rs  point.rs  poly2d.rs  shape2d.rs
auburn2d/src/transformation/: bevy_transform.rs  pos2d.rs  scale_translate2d.rs  transform2d.rs  vec2.rs
auburn2d/tests/: basic.rs  definitions.rs  ergonomics.rs  invariants.rs  shape2d.rs
auburn3d/: Cargo.toml  LICENSE  README.md
auburn3d/src/: algorithm.rs  collider.rs  lib.rs  relation.rs  shape.rs  transformation.rs
auburn3d/src/algorithm/: epa.rs  gjk.rs  toi.rs
auburn3d/src/interactions/: generic.rs  optimized.rs
auburn3d/src/interactions/optimized/: transform3d.rs
auburn3d/src/interactions/optimized/transform3d/: ball_ball.rs  ball_box.rs  ball_point.rs  box_box.rs  box_point.rs  (+1 more)
auburn3d/src/property/: support.rs
auburn3d/src/relation/: cast.rs  collides.rs  penetrates.rs
auburn3d/src/shape/: ball.rs  box3d.rs  point.rs
auburn3d/src/transformation/: bevy_transform.rs  pos3d.rs  scale_translate3d.rs  transform3d.rs  vec3.rs
auburn3d/tests/: basic.rs  definitions.rs  ergonomics.rs  invariants.rs
(+8 files in other folders)
