[workspace]
members = ["auburn2d", "auburn3d"]
resolver = "2"

[workspace.package]
version = "0.2.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/lubomirkurcak/auburn/"

[workspace.dependencies]
glam = { version = "0.32.0", features = ["approx"] }
bevy = { version = "0.19.0" }
approx = "0.5"
test-log = "0.2"
